# 2nd_project

./: .gitmodules  README.md  vc_env.sh
TC375/BSW/Driver/: can.c  can.h
joystick_rasp/: controller.py
ota/: run_mqtt_broker.bat  run_ota_server.bat
ota/broker/: README.txt  mosquitto.conf
ota/publisher/: config.py  ota_message.json  ota_publisher.py  send_ota.py
ota/shared/: config.py
ota/watcher/: file_watcher.py
uds/: can_dash.py
vc_software/: .gitignore  README.md
vc_software/apps/digital_key/: README.md  digital_key_service.py  vehicle_identity.txt
vc_software/apps/digital_key/digital_key/: command_handler.py  ipc_client.py  key_store.py  led_controller.py  pairing.py  pairing_client.py  vehicle_ble.py
vc_software/apps/digital_key/scripts/: init_vehicle.sh  install_system_deps.sh  pairing_pin_check.py  setup_ble_env.sh
vc_software/apps/ota/: config.py  ota_service.py  versions.json
vc_software/apps/ota/backups/test/: test_app.sh_1760507470
vc_software/apps/realtime/: CMakeLists.txt  comm_thread.cpp  config.h  control_thread.cpp  ipc_server.cpp  joystick_thread.cpp  main.cpp  realtime_service.py  sensor_thread.cpp  shared.h  vsomeip_manager.cpp  vsomeip_manager.h
vc_software/apps/ui/: terminal_ui.py
vc_software/systemd/: -ef | grep vc_realtime  vc-controller.service  vc-ota.service  vc-rfcomm0.service  vc-test.service
